<resources>
    <string name="app_name">开眼</string>
    <string name="loading">加载中……</string>
    <string name="network_connection_failed">网络连接失败</string>
    <string name="network_request_timeout">网络连接超时</string>
    <string name="api_data_parse_error">数据解析失败</string>
    <string name="discovery">发现</string>
    <string name="recommend">推荐</string>
    <string name="daily">日报</string>
    <string name="title_home">首页</string>
    <string name="menu_community">社区</string>
    <string name="title_dashboard">我的</string>
    <string name="title_notifications">通知</string>
    <string name="refresh_recommend">刷新推荐</string>
    <string name="add_follow">+关注</string>
    <string name="cache">缓存</string>
    <string name="N_A">N/A</string>
    <string name="TrackType_audio">Audio</string>
    <string name="TrackType_metadata">Meta data</string>
    <string name="TrackType_subtitle">Subtitle</string>
    <string name="TrackType_timedtext">Timed text</string>
    <string name="TrackType_unknown">Unknown</string>
    <string name="TrackType_video">Video</string>
    <string name="VideoView_ar_16_9_fit_parent">16:9 / Fit parent</string>
    <string name="VideoView_ar_4_3_fit_parent">4:3 / Fit parent</string>
    <string name="VideoView_ar_aspect_fill_parent">Aspect / Fill parent</string>
    <string name="VideoView_ar_aspect_fit_parent">Aspect / Fit parent</string>
    <string name="VideoView_ar_aspect_wrap_content">Aspect / Wrap content</string>
    <string name="VideoView_ar_match_parent">Free / Fill parent</string>
    <string name="VideoView_error_button">OK</string>
    <string name="VideoView_error_text_invalid_progressive_playback">Invalid progressive playback</string>
    <string name="VideoView_error_text_unknown">Unknown</string>
    <string name="VideoView_player_AndroidMediaPlayer">Player: AndroidMediaPlayer</string>
    <string name="VideoView_player_IjkExoMediaPlayer">Player: IjkExoMediaPlayer</string>
    <string name="VideoView_player_IjkMediaPlayer">Player: IjkMediaPlayer</string>
    <string name="VideoView_player_none">Player: None</string>
    <string name="VideoView_render_none">Render: None</string>
    <string name="VideoView_render_surface_view">Render: SurfaceView</string>
    <string name="VideoView_render_texture_view">Render: TextureView</string>
    <string name="a_cache">a-cache</string>
    <string name="abandon">放弃</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="account_author_login_header_text">想成为开眼作者？\10请到 http://open.eyepetizer.net/ 申请注册作者账号吧</string>
    <string name="account_author_login_tips">作者登录</string>
    <string name="account_author_login_user_name">请输入邮箱地址</string>
    <string name="account_bind_header_text">根据相关政策法规\10用户发表评论需要绑定手机号</string>
    <string name="account_bind_phone_btn">绑定手机号</string>
    <string name="account_bind_phone_user_name">请输入手机号</string>
    <string name="account_get_password_tips">找回密码</string>
    <string name="account_login_agree_part1">登录或注册即同意开眼</string>
    <string name="account_login_agree_part2">用户服务协议</string>
    <string name="account_login_as_old_way_dialog_content">是否继续使用 %s 方式登录开眼 Eyepetizer?</string>
    <string name="account_login_as_old_way_dialog_title">以之前登录方式登录</string>
    <string name="account_login_btn">登录</string>
    <string name="account_login_input_password">请输入密码</string>
    <string name="account_normal_login_header_text">登录后即可关注作者、\10发表评论、同步收藏视频和播放记录</string>
    <string name="account_normal_login_tips">用户登录</string>
    <string name="account_normal_login_user_name">请输入手机号/邮箱地址</string>
    <string name="account_re_req_verify_code">重发验证码</string>
    <string name="account_register_btn">注册</string>
    <string name="account_register_input_password">请输入最少6位密码</string>
    <string name="account_register_user_name">请输入手机号</string>
    <string name="account_register_verify_code">请输入验证码</string>
    <string name="account_req_verify_call_code">语音验证码</string>
    <string name="account_req_verify_code">获取验证码</string>
    <string name="account_sdk_avatar_upload_failed">上传失败</string>
    <string name="account_sdk_avatar_upload_success">上传成功</string>
    <string name="account_sdk_change_avatar">正在更改，请稍候</string>
    <string name="account_sdk_login">登录</string>
    <string name="account_sdk_login_failure">登录失败</string>
    <string name="account_sdk_netop_server_error">服务器出错了, 请你稍后再使用。</string>
    <string name="account_sdk_netop_submitting_login">正在登录，请稍候</string>
    <string name="account_sdk_nick_empty">请输入新的昵称</string>
    <string name="account_sdk_no_network">对不起，请检查你的网络</string>
    <string name="account_sdk_register_failure">注册失败</string>
    <string name="account_user_register_tips">用户注册</string>
    <string name="action_add_follow">+关注</string>
    <string name="action_add_select">选择</string>
    <string name="action_delete">移除</string>
    <string name="action_deleted">已移除</string>
    <string name="action_followed">已关注</string>
    <string name="action_reupload">重新上传</string>
    <string name="action_selected">已选择</string>
    <string name="action_shielded">已屏蔽</string>
    <string name="activity_not_found">应用未安装</string>
    <string name="ad_track_click">个 CLICK 广告检测事件发送中</string>
    <string name="ad_track_play">个 PLAY 广告检测事件发送中</string>
    <string name="ad_track_show">个 SHOW 广告检测事件发送中</string>
    <string name="advertise">广告</string>
    <string name="ago">前</string>
    <string name="agreement">用户协议</string>
    <string name="album_name_all">All Media</string>
    <string name="alert_button">知道了</string>
    <string name="all_categories">全部分类</string>
    <string name="all_conversation">全部对话</string>
    <string name="all_hot_reply">全部热门评论</string>
    <string name="all_pgcs">全部作者</string>
    <string name="all_reply">所有评论</string>
    <string name="all_screen">100%全屏</string>
    <string name="allo_permission">允许通知，获得作者更新提醒</string>
    <string name="allow">允许</string>
    <string name="and_so_on">等</string>
    <string name="api_net_error_tips">网络异常，请检查网络重新尝试</string>
    <string name="app_launcher_name">开眼</string>
    <string name="app_name_en">Eyepetizer</string>
    <string name="app_name_landing">开 眼</string>
    <string name="app_shortcut_name">开眼 Eyepetizer</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="approve">赞</string>
    <string name="april">Apr</string>
    <string name="august">Aug</string>
    <string name="auth_and_sync">授权并同步数据</string>
    <string name="author_follow_list">作者订阅列表</string>
    <string name="author_info_tips">%1$d 被关注</string>
    <string name="author_info_tips_like">作品被收藏%1$d次</string>
    <string name="author_info_tips_share">作品被分享%1$d次</string>
    <string name="author_video_count">%d 个视频</string>
    <string name="auto_cache_complete">已自动缓存</string>
    <string name="auto_cache_empty_tip">自动缓存的视频可以在这里找到</string>
    <string name="auto_cache_not_open_temporarily">暂不开启</string>
    <string name="auto_cache_onboard_content">将在 Wi-Fi 下自动缓存每日日报（只保留最新 %d 条），你也可以在菜单-设置当中关闭</string>
    <string name="auto_cache_onboard_title">开启日报自动缓存</string>
    <string name="auto_cache_open_right_now">马上开启</string>
    <string name="auto_cache_user_guide_content_text">我们将在有 Wi-Fi 的情况下为你缓存好日报视频，在没有网络的时候也可以观看啦!</string>
    <string name="auto_cache_user_guide_content_title">- Wi-Fi 下自动缓存日报视频 -</string>
    <string name="auto_cache_user_guide_header_text1">缓存好的视频都在</string>
    <string name="auto_cache_user_guide_header_text2">下的「我的缓存」中 </string>
    <string name="auto_play_follow_card_intro_txt">发布了作品:</string>
    <string name="auto_play_follow_card_subject_txt">主题下</string>
    <string name="be_to_play">即将播放</string>
    <string name="before_intro">在</string>
    <string name="bit_rate">bit_rate</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="button_apply">Apply(%1$d)</string>
    <string name="button_apply_default">Apply</string>
    <string name="button_back">Back</string>
    <string name="button_ok">OK</string>
    <string name="button_original">Original</string>
    <string name="button_preview">Preview</string>
    <string name="button_sure">Sure(%1$d)</string>
    <string name="button_sure_default">Sure</string>
    <string name="cache_add_queue">已加入缓存队列</string>
    <string name="cache_canceled">缓存已取消</string>
    <string name="cache_clean_all">清空缓存</string>
    <string name="cache_clean_all_alert_content">确认后所有缓存将被清除</string>
    <string name="cache_clean_all_alert_title">确认清空缓存</string>
    <string name="cache_empty_tip">你缓存的视频可以在这里找到</string>
    <string name="cache_failed">缓存失败</string>
    <string name="cache_finished">已缓存</string>
    <string name="cache_info_text">在设置页面中可以选择视频缓存路径</string>
    <string name="cache_pause">缓存暂停</string>
    <string name="cache_wait_network">等待网络</string>
    <string name="cache_wait_wifi">等待 Wi-Fi</string>
    <string name="caching">缓存中</string>
    <string name="calendar_tips">长按识别二维码\10查看更多旅行日历</string>
    <string name="campaign_list_title">专题</string>
    <string name="cancel">取消</string>
    <string name="collect">收藏</string>
    <string name="notify_no_account_tip1">别错过重要的信息</string>
    <string name="notify_no_account_tip2">登录后即可查看评论回复、点赞及关注等通知信息</string>
</resources>