<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/select_ic_tab_strip_icon_feed"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_community"
        android:icon="@drawable/select_ic_tab_strip_icon_follow"
        android:title="@string/menu_community" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/select_ic_tab_strip_icon_category"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/select_ic_tab_strip_icon_profile"
        android:title="@string/title_notifications" />

</menu>