<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <ImageView
        android:layout_marginTop="@dimen/dp_78"
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/no_account_tip" />

    <TextView
        android:fontFamily="@font/fzlantingheis_db1_gb_regular"
        android:layout_marginTop="@dimen/dp_35"
        android:textColor="@color/color_normal_dark"
        android:textSize="@dimen/sp_16"
        android:id="@+id/textView16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_no_account_tip1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView6" />

    <TextView
        android:layout_marginTop="@dimen/dp_10"
        android:textColor="@color/text_7d"
        android:textSize="@dimen/dp_12"
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notify_no_account_tip2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16" />

    <TextView
        android:layout_marginTop="@dimen/dp_60"
        android:textSize="@dimen/sp_16"
        android:gravity="center"
        android:textColor="@color/text_white"
        android:background="@color/alert_color_blue"
        android:id="@+id/textView18"
        android:layout_width="@dimen/dp_240"
        android:layout_height="@dimen/dp_40"
        android:text="@string/account_login_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />
</androidx.constraintlayout.widget.ConstraintLayout>